# pire

./: .gitignore  LICENSE  README  pire.cabal
docs/: .gitignore  Build.hs  cfg  fo-bullets  fo.xsl  footer  header  html.xsl  intro.dbk  my-fop-pfmreader  my.css  parsec.dbk  pi101.dbk  pire.dbk  pire.html  preproc.xsl  rm-xml-base-etc.xsl  schemas.xml  src+install.dbk  tour.dbk
docs/install/: deb-libxml2-utils-for-xmllint
install/: install-readme  readme
samples/: Fac.pi  Fac_.pi  Nat.pi  Nat2.pi  Sample.pi  SimpleSample.pi
src/: PrettyPrint.hs  Re.hs  ReModules.hs  RePP.hs  ReParse.hs  ReSyntax.hs  exmpls.hs
