Name: pire
Version: 0.1
License: BSD3
License-file: LICENSE
Copyright: (c) 2013 University of Pennsylvania
Description: An implementation of a simple dependently typed language for OPLSS 2013
Author: Stephanie Weirich <sweirich@cis.upenn.edu>, based on code by Trellys Team <trellys@...>
Maintainer: Stephanie Weirich <sweirich@cis.upenn.edu>
Cabal-Version: >= 1.2
Build-type: Simple
tested-with: GHC == 7.6.3

library
  hs-source-dirs: src/
  Exposed-modules: Syntax
                   Parser
                   TypeCheck
                   Main
  Build-depends:  base >= 4

executable pi-forall
  hs-source-dirs: src/
  Main-is: Main.hs
  Build-depends:
                 -- orig stuff from pi-forall, some upper bounds relaxed

                 base >=4

                 -- parsec >= 3.1 && < 3.1.5,
                 , parsec >= 3.1

                 , pretty >= 1.0.1.0

                 -- , RepLib >= 0.5.3 && < 0.6
                 , RepLib >= 0.5.3

                 -- , unbound >= 0.4.2 && < 0.5
                 , unbound >= 0.4.2

                 , mtl
                 -- 0.2.2.0, 0.3.0.0
                 , transformers

                 -- , array >= 0.3.0.2 && < 0.6
                 , array >= 0.3.0.2

                 , containers
                 , directory
                 , filepath
                 , HUnit
                 , QuickCheck

                 -- bimap == 0.2.4
                 , bimap == 0.2.4


                 -- rx
                 -- , either
                 -- , pretty-show

   		-- , pretty-show >= 1.6.6

                 -- in Aug 2014 trifecta problems (with t' 1.5.1) => semigroups constraint
                 -- , semigroups==0.15.2

                 -- but lower bound more relaxed now, using debian's trifecta
                 , trifecta >= 1.4.3

                  -- need as well

                  -- Text.Parser.LookAhead etc
                  , parsers

                  , lens


                  -- for Data.HashSet
                 , unordered-containers

                 -- for Text.PrettyPrint.ANSI.Leijen
                 , ansi-wl-pprint



                 -- Data.Text.Encoding - decodeUtf8 etc
                 -- ws <- sliced whiteSpace'
                 , text

                 -- Data.ByteString.UTF8 in Rx bzw in ReParse.hs
                 ,  utf8-string
                 -- ,  utf8-string >= 1.6.6

  Ghc-Options:  -Wall -fno-warn-unused-matches


